
* ALL THE CHANGE LOG ENTRIES SINCE 2007-05-28 ARE IN THE GIT REPOSITORY. USE
  "git log" COMMAND

2007-05-28  Heikki Orsila <heikki.orsila@iki.fi>
	- The development has been moved to a Git repository. Please issue
	  "git-clone git://zakalwe.fi/uade uade.git" to checkout the latest
	  version from the repository.

2007-05-27  Heikki Orsila <heikki.orsila@iki.fi>
	- Commit messages into version repository should from now on include
	  a short tag explaining the nature of the commit.
	  The tags are:
	  * [ADAPTIVE] - adaptive maintenance: the commit makes software to
	    work better with the surrounding environment (compilers, libraries,
	    path names ...)
	  * [CORRECTVE] - corrective maintenance: fix a defect in the program
	  * [PERFECTIVE] - perfective maintenance: used when adding a feature
	    or improving an existing feature
	  * [PREVENTIVE] - preventive maintenance: used when refactoring,
	    cleaning or asserting the code, or adding self-tests

	  See http://www.site.uottawa.ca:4321/oose/index.html#maintenance

	- Fixed Audacious plugin to work for Audacious 1.4/2.x
	  Christian Birchinger <joker@netswarm.net> [ADAPTIVE] [CORRECTIVE]

2007-05-03  Michael Doering <mld@users.sourceforge.net>
	- Added a new version of Synthdream replayer from Don Adan

2007-04-30  Heikki Orsila <heikki.orsila@iki.fi>
	* UADE 2.07 (Walpurgis night)
	- Added Special FX ST replayer from Don Adan
	- Added a new version of Special FX replayer from Don Adan
	- Work-arounded libao/alsa so that it drains the audio device for
	  the last few milliseconds of sample data for the last played song.
	  Thanks to Cthulhu for pointing out the problem.
	- Many fixes in song length database code
	  # Fixed a bug that only the last played subsong time was recorded
	    into the song db
	  # Fixed a file-locking race condition in song db
	  # Fixed a song db corruption bug
	  # Cleaned song db code
	- Support for full Drag and Drop/Local URL Support in Audacious 1.3
	  plugin