@@ -2,6 +2,14 @@
 * ALL THE CHANGE LOG ENTRIES SINCE 2007-05-28 ARE IN THE GIT REPOSITORY. USE
   "git log" COMMAND
 
+2013-08-05  Matthias Ehrmann <airmann_pub@online.de>
+	- new "--quadmode" option: enables multichannel audio output directly
+	from PAULA emulation. Added some helper scripts:
+	- dist_clean.sh / dist_make.sh (should actually be integrated into configure)
+	- split_quad.sh
+	- test_quad.sh
+	- improved .gitignore files
+
 2007-05-28  Heikki Orsila <heikki.orsila@iki.fi>
 	- The development has been moved to a Git repository. Please issue
 	  "git-clone git://zakalwe.fi/uade uade.git" to checkout the latest
